--- a/_config.yml
+++ b/_config.yml
@@ -230,8 +230,8 @@ display_tags: ['formatting', 'images', 'links', 'math', 'code'] # this tags will
 
 scholar:
 
-  last_name: [Einstein]
-  first_name: [Albert, A.]
+  last_name: [Lin]
+  first_name: [Wei-Cheng, W.-C.]
 
   style: apa
   locale: en
