--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -11,9 +11,9 @@
 - title: Education
   type: time_table
   contents:
-    - title: PhD
+    - title: Undergraduate
       institution: National Taiwan Normal University
-      year: 2017-2021
+      year: 2017-2022
 
     - title: Exchange student
       institution: National ITMO University
